--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,11 @@ html {
 .container .right-column .title {
   margin: 1rem 0;
 }
+.container .right-column .flex {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 0 0.5rem;
+}
 .container .right-column .img-examples {
   width: 100%;
 }
